--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Tappt-Android</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_tap">Tap</string>
+    <string name="tap_help">Tap your phone on the Tappt device to start your pour.</string>
 
 </resources>
