--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Tappt-Android</string>
+    <string name="app_name">Tappt</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="tap_in">Tap In</string>
+    <string name="write_tag">Authorize NFC Tag</string>
     <string name="title_activity_tap">Tap</string>
     <string name="tap_help">Tap your phone on the Tappt device to start your pour.</string>
 
